Add inputs generator

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "cSpell.words": [
+        "inputgen",
         "Siddon"
-    ]
+    ],
+    "files.associations": {
+        "stdio.h": "c",
+        "stdlib.h": "c"
+    }
 }
