Add thesis introduction, mathematics, input description and some geometric considerations

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
     ],
     "cSpell.words": [
         "inputgen",
-        "Siddon"
+        "Siddon",
+        "sinogramma"
     ],
     "files.associations": {
         "stdio.h": "c",
