Update Makefile and README accordingly

--- a/src/Makefile
+++ b/src/Makefile
@@ -110,15 +110,15 @@ endif
 
 ## INPUT
 
-DIR_INPUT := input
+DIR_INPUT := inputs
 
 CUBE_WITH_SPHERICAL_HOLE := CubeWithSphericalHole
 HALF_SPHERE := HalfSphere
 CUBE := Cube
 
-CUBE_WITH_SPHERICAL_HOLE_WITH_SUFFIX := $(CUBE_WITH_SPHERICAL_HOLE)-$(SUFFIX_SIZE)
-HALF_SPHERE_WITH_SUFFIX := $(HALF_SPHERE)-$(SUFFIX_SIZE)
-CUBE_WITH_SUFFIX := $(CUBE)-$(SUFFIX_SIZE)
+CUBE_WITH_SPHERICAL_HOLE_WITH_SUFFIX := $(CUBE_WITH_SPHERICAL_HOLE)$(SUFFIX_SIZE)
+HALF_SPHERE_WITH_SUFFIX := $(HALF_SPHERE)$(SUFFIX_SIZE)
+CUBE_WITH_SUFFIX := $(CUBE)$(SUFFIX_SIZE)
 
 SHAPES := $(CUBE_WITH_SPHERICAL_HOLE_WITH_SUFFIX) $(HALF_SPHERE_WITH_SUFFIX) $(CUBE_WITH_SUFFIX)
 
@@ -138,7 +138,7 @@ $(DIR_INPUT)/$(CUBE_WITH_SUFFIX).dat: $(DIR_BIN)/$(EXE_INPUT)
 
 ## OUTPUT
 
-DIR_OUTPUT := output
+DIR_OUTPUT := outputs
 
 # OpenMP
 
