Update OpenMP and CUDA projection implementations with new data types that are more appropriate for the inputs dimensions, update input generation implementation accordingly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "common.h": "c",
         "hpc.h": "c",
         "time.h": "c",
-        "assert.h": "c"
+        "assert.h": "c",
+        "math.h": "c"
     }
 }
